--- a/client/src/theme/Components/browse/event/_events.scss
+++ b/client/src/theme/Components/browse/event/_events.scss
@@ -126,6 +126,10 @@
       padding-left: 36px;
     }
 
+    > div {
+      width: 100%;
+    }
+
     .manicon {
       position: absolute;
       top: 0;
