--- a/client/src/theme/Components/reader/annotation/_detail.scss
+++ b/client/src/theme/Components/reader/annotation/_detail.scss
@@ -108,8 +108,6 @@
     @include drawerIndent(padding-left);
     font-weight: $regular;
     line-height: 1.375;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
   }
 
   // Direct scoping because nested comments also have utility
